Hermes_Linux部署运维/Hermes的linux直装/2026.8.28/部署前准备.md
# Hermes Linux 直装 — 部署前准备

本目录只包含**部署脚本、配置模板和补丁**，不包含 `hermes-agent`、`hermes-webui`、`mcp` 等子仓库的运行时代码。首次部署时 `hermes-deploy.sh` 会自动从 GitHub 拉取并构建。

## 1. 环境要求

- Linux 服务器 / VPS（推荐 Ubuntu 22.04/24.04、Debian 12）
- systemd 可用
- 能访问 GitHub、pip、npm 源
- root 或 sudo 权限

必须预先安装的软件：

```bash
sudo apt update
sudo apt install -y git python3 python3-venv python3-pip nodejs npm curl
```

> 如果你的系统使用 `python-is-python3`，可以跳过额外设置；否则建议 `ln -s /usr/bin/python3 /usr/local/bin/python`。

## 2. 准备目录

```bash
sudo mkdir -p /opt/hermes
sudo chown $(whoami):$(whoami) /opt/hermes
cd /opt/hermes
# 把本仓库中的 hermes-deploy.sh、hermesctl.sh、data/、patches/、mcp-patches/、README.md 复制到此处
cp -r /path/to/clone/Hermes_Linux部署运维/Hermes的linux直装/2026.8.17/* .
```

## 3. 填入真实密钥

所有模板中的 key 都已用 `sk-RRRRRR...` / `ghp_RRRRRRR...` 占位，**必须先替换为真实值**。

### 3.1 `.env`

```bash
cp data/.env.example data/.env
nano data/.env
```

至少填写：

- `HERMES_XIAOYI_KEY` — xiaoyi provider key
- `HERMES_KUAIPAO_GPT_KEY` — kuaipao fallback key（如启用）
- `HERMES_ATLASCLOUD_KEY` — atlascloud fallback key（如启用）
- `XIAOYI_GROK_IMAGE_KEY` — 图片生成 MCP key
- `HERMES_WEBUI_PASSWORD` — WebUI 登录密码

### 3.2 `config.yaml`

```bash
cp data/config.yaml.example data/config.yaml
nano data/config.yaml
```

按实际需求调整：

- 默认 provider / model
- fallback_providers
- MCP server 列表

### 3.3 `auth.json`

```bash
cp data/auth.json.example data/auth.json
```

按需要修改管理员账号。

## 4. 运行部署

```bash
bash hermes-deploy.sh
```

部署脚本会自动：

- 创建 `/opt/hermes/venv` 虚拟环境
- 克隆 `hermes-agent`、`hermes-webui`
- 应用 `patches/` 和 `mcp-patches/`
- 写入 systemd 服务
- 启动 `hermes-gateway`、`hermes-webui`

如果后续需要重新部署：

```bash
FORCE=1 bash hermes-deploy.sh
```

> `FORCE=1` 会重新拉取子仓库并重新打补丁，但默认保留 `data/.env` 和 `data/config.yaml`。

## 5. 部署后验证

```bash
sudo systemctl status hermes-gateway
sudo systemctl status hermes-webui
```

查看 WebUI 入口：

```bash
/opt/hermes/hermesctl.sh status
```

或打开浏览器：

```
http://<服务器IP>:8787
```

默认登录密码见 `data/.env` 中的 `HERMES_WEBUI_PASSWORD`。

## 6. 常用控制命令

```bash
# 数字菜单
/opt/hermes/hermesctl.sh

# 切换 provider/model
/opt/hermes/hermesctl.sh switch xiaoyi-gpt
/opt/hermes/hermesctl.sh switch kuaipao-gpt-5.6-sol
/opt/hermes/hermesctl.sh switch atlascloud-grok-4.3

# 查看帮助
/opt/hermes/hermesctl.sh --help
```

## 7. 不上传的内容

以下内容**不应提交到 GitHub**，部署脚本和 `.gitignore` 已默认排除：

- `data/output/` — 图片/文件输出目录
- `data/.env`、`data/config.yaml`、`data/auth.json` — 真实密钥
- `venv/`、数据库、缓存、日志、会话
- `hermes-agent/`、`hermes-webui/`、`mcp/` — 子仓库（由部署脚本重建）
