Hermes_Linux部署运维/Hermes的linux直装/2026.9.20/部署前准备.md
# Hermes Linux 直装 — 部署前准备

本目录只包含**部署脚本、配置模板和补丁**，不包含 `hermes-agent`、`hermes-webui`、`mcp` 等子仓库的运行时代码。首次部署时 `hermes-deploy.sh` 会自动从 GitHub 拉取并构建。

## 1. 环境要求

- Linux 服务器 / VPS（推荐 Ubuntu 22.04/24.04、Debian 12）
- systemd 可用
- 能访问 GitHub、pip、npm 源
- root 权限（部署脚本内 `ensure_root`，非 root 直接退出）

`hermes-deploy.sh` 会**自动安装全部依赖**，无需手工预装：

- 系统包：`curl ca-certificates git openssl unzip tar build-essential python3-venv python3-dev`
- `uv`、Python `3.12.13`、Node.js（NodeSource current 通道）

> 只要系统能跑 `apt` 且有办法把本目录文件放上去（git clone / scp / 面板上传均可）即可。

## 2. 准备目录

```bash
sudo mkdir -p /opt/hermes
sudo chown $(whoami):$(whoami) /opt/hermes
cd /opt/hermes
# 把本仓库中的 hermes-deploy.sh、hermesctl.sh、data/、patches/、mcp-patches/、.gitignore、README.md 复制到此处
cp -r /path/to/clone/Hermes_Linux部署运维/Hermes的linux直装/2026.9.20/* .
cp -r /path/to/clone/Hermes_Linux部署运维/Hermes的linux直装/2026.9.20/.gitignore .
```

## 3. 填入真实密钥

所有模板中的 key 都已用 `sk-RRRRRR...` / `ghp_RRRRRRR...` 占位，**必须先替换为真实值**。

### 3.1 `.env`

```bash
cp data/.env.example data/.env
nano data/.env
```

至少填写：

- `HERMES_XIAOYI_ASTRA_KEY` — xiaoyi gpt-6-astra key（默认主模型）
- `HERMES_XIAOYI_FABLE_KEY` — xiaoyi claude-fable-5-1 key
- `HERMES_ATLASCLOUD_KEY` — atlascloud fallback key（如启用）
- `XIAOYI_GROK_IMAGE_KEY` — 图片生成 MCP key
- `HERMES_WEBUI_PASSWORD` — WebUI 登录密码

### 3.2 `config.yaml`

```bash
cp data/config.yaml.example data/config.yaml
nano data/config.yaml
```

按实际需求调整：

- 默认 provider / model
- fallback_providers
- MCP server 列表

### 3.3 `auth.json`

```bash
cp data/auth.json.example data/auth.json
```

按需要修改管理员账号。

## 4. 运行部署

```bash
bash hermes-deploy.sh
```

部署脚本会自动：

- 安装系统依赖、`uv`、Python 3.12、Node.js
- 创建 `/opt/hermes/venv` 虚拟环境
- 克隆 `hermes-agent`、`hermes-webui`（`NousResearch/hermes-agent`、`nesquena/hermes-webui`）
- 生成 `data/.env`、`data/config.yaml`、`data/refresh_auth_json.py`（已存在则保留并备份到 `backups/`）
- 从 `.env` 动态注入 MCP 配置到 `config.yaml`
- 从上游构建 MCP 并应用 `mcp-patches/`、应用 `patches/`（含 WebUI 移动端补丁）
- 写入并启动 systemd 服务 `hermes-gateway`、`hermes-webui`

如果后续需要重新部署：

```bash
FORCE=1 bash hermes-deploy.sh
```

> `FORCE=1` 会重新拉取子仓库并重新打补丁，但默认保留 `data/.env` 和 `data/config.yaml`。

## 5. 部署后验证

```bash
sudo systemctl status hermes-gateway
sudo systemctl status hermes-webui
```

查看 WebUI 入口：

```bash
/opt/hermes/hermesctl.sh status
```

或打开浏览器：

```
http://<服务器IP>:8787
```

默认登录密码见 `data/.env` 中的 `HERMES_WEBUI_PASSWORD`。

## 6. 常用控制命令

```bash
# 数字菜单
/opt/hermes/hermesctl.sh

# 切换 provider/model
/opt/hermes/hermesctl.sh switch xiaoyi-gpt-6-astra
/opt/hermes/hermesctl.sh switch xiaoyi-claude-fable-5-1
/opt/hermes/hermesctl.sh switch atlascloud-grok-4.3
/opt/hermes/hermesctl.sh switch atlascloud-grok-4.6

# 查看帮助
/opt/hermes/hermesctl.sh --help
```

## 7. 不上传的内容

以下内容**不应提交到 GitHub**，部署脚本和 `.gitignore` 已默认排除：

- `data/output/` — 图片/文件输出目录
- `data/.env`、`data/config.yaml`、`data/auth.json` — 真实密钥（仓库只放 `.example` 模板）
- `venv/`、数据库（`*.db*`）、缓存、日志、会话、`data/webui/`
- `backups/`、`deploy.log` — 本机备份与部署日志
- `hermes-agent/`、`hermes-webui/`、`mcp/` — 子仓库（由部署脚本重建）
